Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0 Beta 1
-
windows
-
4c6d12e6d22c4b78885c6fe5ac0c1d64a87e3bcf
Description
Windows native fonts are not rendered in QML applications as the font engine cloning required by QRawFont is done incorrectly, it wraps the requested engine into multi-engine wrapper, which QRawFont can't handle.
Attachments
Issue Links
- is required for
-
QTBUG-24205 Qt 5.0 - Windows: Check fonts
-
- Closed
-