Fix missing Windows native fonts in QML applications

Windows native fonts were not getting rendered because the font engine
was cloned incorrectly for QRawFont, resulting in multi-engine instead
of the specific cloned engine.

Task-number: QTBUG-25410
Change-Id: I08f543e541739ac1b51f96f381ae1bb20b59399a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@nokia.com>

cregit: 4c6d12e6d22c4b78885c6fe5ac0c1d64a87e3bcf https://github.com/qt/qtbase/commit/4c6d12e6d22c4b78885c6fe5ac0c1d64a87e3bcf